# DCS2100-OpenCV

./: README.md
IPcam_capture/: CMakeLists.txt  CMakeLists.txt~  capVideo.cpp  capVideo.cpp~  dispImage.cpp~  dispVideo.cpp~  writeImage.cpp~  writeVideo.cpp~
IPcam_capture_py/: ipcam_test.py
